unpackaged/main/default/objects/Check_List__c/Check_List__c.object-meta.xml
<CustomObject>
    <label>Check List</label>
    <nameField>
        <label>No. CheckList</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Check List</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>