unpackaged/main/default/objects/Check_List__c/fields/AcabadoExteriorPintura__c.field-meta.xml
<CustomField>
    <fullName>AcabadoExteriorPintura__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acabado exterior y pintura</label>
    <type>Checkbox</type>
</CustomField>