unpackaged/main/default/objects/Check_List__c/fields/AcabadoInteriorNivelTres__c.field-meta.xml
<CustomField>
    <fullName>AcabadoInteriorNivelTres__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acabado interior N3</label>
    <type>Checkbox</type>
</CustomField>