unpackaged/main/default/objects/Check_List__c/fields/AcabadoInteriorPlantaAlta__c.field-meta.xml
<CustomField>
    <fullName>AcabadoInteriorPlantaAlta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acabado interior PA</label>
    <type>Checkbox</type>
</CustomField>