unpackaged/main/default/objects/Check_List__c/fields/AcabadosLosaAzotea__c.field-meta.xml
<CustomField>
    <fullName>AcabadosLosaAzotea__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acabados en losa azotea</label>
    <type>Checkbox</type>
</CustomField>