unpackaged/main/default/objects/Check_List__c/fields/AcaboInterior__c.field-meta.xml
<CustomField>
    <fullName>AcaboInterior__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Acabo interior</label>
    <type>Checkbox</type>
</CustomField>