unpackaged/main/default/objects/Check_List__c/fields/AccesoriosElctricosPrepNivelTres__c.field-meta.xml
<CustomField>
    <fullName>AccesoriosElctricosPrepNivelTres__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Accesorios eléctricos y preparación para minisplit guiada Nivel Tres</inlineHelpText>
    <label>Accesorios eléctricos y preparación N3</label>
    <type>Checkbox</type>
</CustomField>