unpackaged/main/default/objects/Check_List__c/fields/AccesoriosElectricos__c.field-meta.xml
<CustomField>
    <fullName>AccesoriosElectricos__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Accesorios eléctricos y conexiones en murete</inlineHelpText>
    <label>Accesorios eléctricos</label>
    <type>Checkbox</type>
</CustomField>