unpackaged/main/default/objects/Check_List__c/fields/AccesoriosElectricosPreparacion__c.field-meta.xml
<CustomField>
    <fullName>AccesoriosElectricosPreparacion__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Accesorios eléctricos y preparación para minisplit guiada</inlineHelpText>
    <label>Accesorios eléctricos y preparación</label>
    <type>Checkbox</type>
</CustomField>