unpackaged/main/default/objects/Check_List__c/fields/AccesoriosElectricosPrepPlantaAlta__c.field-meta.xml
<CustomField>
    <fullName>AccesoriosElectricosPrepPlantaAlta__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Accesorios eléctricos y preparación  para minisplit guiada Planta Alta</inlineHelpText>
    <label>Accesorios eléctricos y preparación PA</label>
    <type>Checkbox</type>
</CustomField>