unpackaged/main/default/objects/Check_List__c/fields/AzulejosPisos__c.field-meta.xml
<CustomField>
    <fullName>AzulejosPisos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Azulejos y pisos</label>
    <type>Checkbox</type>
</CustomField>