unpackaged/main/default/objects/Check_List__c/fields/AzulejosPisosPlantaAlta__c.field-meta.xml
<CustomField>
    <fullName>AzulejosPisosPlantaAlta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Azulejos y pisos PA</label>
    <type>Checkbox</type>
</CustomField>