unpackaged/main/default/objects/Check_List__c/fields/AzulejosPisosZoclo__c.field-meta.xml
<CustomField>
    <fullName>AzulejosPisosZoclo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Azulejos, pisos y zoclo</label>
    <type>Checkbox</type>
</CustomField>