unpackaged/main/default/objects/Check_List__c/fields/BanquetasBardasPropiasMedianeras__c.field-meta.xml
<CustomField>
    <fullName>BanquetasBardasPropiasMedianeras__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Banquetas, bardas propias y medianeras</label>
    <type>Checkbox</type>
</CustomField>