unpackaged/main/default/objects/Check_List__c/fields/CalentadorValvulaAlivioColocado__c.field-meta.xml
<CustomField>
    <fullName>CalentadorValvulaAlivioColocado__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Calentador y válvula de alivio colocado (S.A)</inlineHelpText>
    <label>Calentador y válvula de alivio colocado</label>
    <type>Checkbox</type>
</CustomField>