unpackaged/main/default/objects/Check_List__c/fields/CampoAbierto__c.field-meta.xml
<CustomField>
    <fullName>CampoAbierto__c</fullName>
    <label>Campo abierto</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>