unpackaged/main/default/objects/Check_List__c/fields/ColocacionCalentadoresSolares__c.field-meta.xml
<CustomField>
    <fullName>ColocacionCalentadoresSolares__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Colocación de calentadores solares (S.A)</label>
    <type>Checkbox</type>
</CustomField>