unpackaged/main/default/objects/Check_List__c/fields/Completado__c.field-meta.xml
<CustomField>
    <fullName>Completado__c</fullName>
    <label>% Completado</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>