unpackaged/main/default/objects/Check_List__c/fields/CorreEnvio__c.field-meta.xml
<CustomField>
    <fullName>CorreEnvio__c</fullName>
    <inlineHelpText>correos electrónicos separados por ;</inlineHelpText>
    <label>Correo envio</label>
    <length>255</length>
    <type>Text</type>
</CustomField>