unpackaged/main/default/objects/Check_List__c/fields/ImpermeabilizacionVentilasPoliductos__c.field-meta.xml
<CustomField>
    <fullName>ImpermeabilizacionVentilasPoliductos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Impermeabilización ventilas y poliductos</label>
    <type>Checkbox</type>
</CustomField>