unpackaged/main/default/objects/Check_List__c/fields/KitEcologicoCompleto__c.field-meta.xml
<CustomField>
    <fullName>KitEcologicoCompleto__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Kit ecológico completo (si aplica)</label>
    <type>Checkbox</type>
</CustomField>