unpackaged/main/default/objects/Check_List__c/fields/LavaderoConexionesColaderasRegistro__c.field-meta.xml
<CustomField>
    <fullName>LavaderoConexionesColaderasRegistro__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lavadero conexiones coladeras y registro</label>
    <type>Checkbox</type>
</CustomField>