unpackaged/main/default/objects/Check_List__c/fields/MarcosPuertasVentanasChapasCorrediza__c.field-meta.xml
<CustomField>
    <fullName>MarcosPuertasVentanasChapasCorrediza__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marcos puertas ventanas chapas corrediza</label>
    <type>Checkbox</type>
</CustomField>