unpackaged/main/default/objects/Check_List__c/fields/MarcosPuertasVentanasChapasNivelTres__c.field-meta.xml
<CustomField>
    <fullName>MarcosPuertasVentanasChapasNivelTres__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marcos, puertas, ventanas, chapas, corrediza N3</inlineHelpText>
    <label>Marcos, puertas, ventanas, chapas N3</label>
    <type>Checkbox</type>
</CustomField>