unpackaged/main/default/objects/Check_List__c/fields/MarcosPuertasVentanasCHapasPA__c.field-meta.xml
<CustomField>
    <fullName>MarcosPuertasVentanasCHapasPA__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Marcos, puertas, ventanas, chapas, corrediza PA</inlineHelpText>
    <label>Marcos, puertas, ventanas, chapas, PA</label>
    <type>Checkbox</type>
</CustomField>