unpackaged/main/default/objects/Check_List__c/fields/ObservacionesAcabadoInteriorNivelTres__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesAcabadoInteriorNivelTres__c</fullName>
    <label>Observaciones acabado interior N3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>