unpackaged/main/default/objects/Check_List__c/fields/ObservacionesAcabadoInteriorPlantaAlta__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesAcabadoInteriorPlantaAlta__c</fullName>
    <label>Observaciones acabado interior PA</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>