unpackaged/main/default/objects/Check_List__c/fields/ObservacionesAccEl__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesAccEl__c</fullName>
    <label>Observaciones accesorios electricos</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>