unpackaged/main/default/objects/Check_List__c/fields/ObservacionesAccElectricosPrepNivelTres__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesAccElectricosPrepNivelTres__c</fullName>
    <inlineHelpText>Observaciones accesorios eléctricos y preparación Nivel Tres</inlineHelpText>
    <label>Observaciones acc. eléctricos prep N3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>