unpackaged/main/default/objects/Check_List__c/fields/ObservacionesAccElectricosPrepPlantaAlta__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesAccElectricosPrepPlantaAlta__c</fullName>
    <inlineHelpText>Observaciones accesorios eléctricos preparados Planta Alta</inlineHelpText>
    <label>Observaciones acc. eléctricos prep PA</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>