unpackaged/main/default/objects/Check_List__c/fields/ObservacionesAccElePrep__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesAccElePrep__c</fullName>
    <inlineHelpText>Observaciones en accesorios eléctricos  y preparación para minisplit giuada</inlineHelpText>
    <label>Observaciones accesorios eléctricos prep</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>