unpackaged/main/default/objects/Check_List__c/fields/ObservacionesAcInt__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesAcInt__c</fullName>
    <label>Observaciones acabado interior</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>