unpackaged/main/default/objects/Check_List__c/fields/ObservacionesAcLosAz__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesAcLosAz__c</fullName>
    <label>Observaciones acabados en losa azotea</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>