unpackaged/main/default/objects/Check_List__c/fields/ObservacionesAzulejosPisosPlantaAlta__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesAzulejosPisosPlantaAlta__c</fullName>
    <label>Observaciones azulejos y pisos PA</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>