unpackaged/main/default/objects/Check_List__c/fields/ObservacionesAzulejosPisosZoclo__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesAzulejosPisosZoclo__c</fullName>
    <label>Observaciones azulejos, pisos y zoclo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>