unpackaged/main/default/objects/Check_List__c/fields/ObservacionesAzuPi__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesAzuPi__c</fullName>
    <label>Observaciones azulejos y pisos</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>