unpackaged/main/default/objects/Check_List__c/fields/ObservacionesBanBaPrMe__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesBanBaPrMe__c</fullName>
    <description>Observaciones banquetas, bardas, propias y medianeras</description>
    <label>Observaciones banquetas, bardas propias</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>