unpackaged/main/default/objects/Check_List__c/fields/ObservacionesCalentadorValvula__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesCalentadorValvula__c</fullName>
    <inlineHelpText>Observaciones calentador y válvula de alivio colocado (S.A)</inlineHelpText>
    <label>Observaciones calentador y válvula</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>