unpackaged/main/default/objects/Check_List__c/fields/ObservacionesColCalSol__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesColCalSol__c</fullName>
    <inlineHelpText>Observaciones de colocación de calentadores solares</inlineHelpText>
    <label>Observaciones colocación calentadores</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>