unpackaged/main/default/objects/Check_List__c/fields/ObservacionesExtPin__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesExtPin__c</fullName>
    <label>Observaciones Exterior y pintura</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>