unpackaged/main/default/objects/Check_List__c/fields/ObservacionesImpVen__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesImpVen__c</fullName>
    <description>Observaciones impermeabilización ventilas y productos</description>
    <label>Observaciones impermeabilización</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>