unpackaged/main/default/objects/Check_List__c/fields/ObservacionesKitEcologico__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesKitEcologico__c</fullName>
    <label>Observaciones kit ecológico</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>