unpackaged/main/default/objects/Check_List__c/fields/ObservacionesLavaderoConexiones__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesLavaderoConexiones__c</fullName>
    <description>Observaciones de lavadero, conexiones, coladeras y registros</description>
    <label>Observaciones lavadero conexiones</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>