unpackaged/main/default/objects/Check_List__c/fields/ObservacionesMaPuveChCo__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesMaPuveChCo__c</fullName>
    <description>Observaciones marcos puertas ventanas chapas corrediza</description>
    <label>Observaciones marcos puertas ventanas</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>