unpackaged/main/default/objects/Check_List__c/fields/ObservacionesMarcPuerVenNivelTres__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesMarcPuerVenNivelTres__c</fullName>
    <inlineHelpText>Observaciones marcos puertas ventanas chapas y corrediza Nivel Tres</inlineHelpText>
    <label>Observaciones marcos puertas ventanas N3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>