unpackaged/main/default/objects/Check_List__c/fields/ObservacionesMarcPuerVenPlantaAlta__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesMarcPuerVenPlantaAlta__c</fullName>
    <label>Observaciones marcos puertas ventanas PA</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>