unpackaged/main/default/objects/Check_List__c/fields/ObservacionesPisoCeramicoBanqueta__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesPisoCeramicoBanqueta__c</fullName>
    <label>Observaciones piso cerámico y banqueta</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>