unpackaged/main/default/objects/Check_List__c/fields/ObservacionesPrEleRea__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesPrEleRea__c</fullName>
    <inlineHelpText>Observaciones en pruebas eléctricas realizadas</inlineHelpText>
    <label>Observaciones prueba eléctrica realizada</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>