unpackaged/main/default/objects/Check_List__c/fields/ObservacionesPruebaElectrica__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesPruebaElectrica__c</fullName>
    <label>Observaciones prueba eléctrica</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>