unpackaged/main/default/objects/Check_List__c/fields/ObservacionesPruebaHidraulica__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesPruebaHidraulica__c</fullName>
    <label>Observaciones prueba hidráulica</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>