unpackaged/main/default/objects/Check_List__c/fields/ObservacionesPruebaHidraulicaRealizada__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesPruebaHidraulicaRealizada__c</fullName>
    <inlineHelpText>Observaciones en prueba hidráulica realizada</inlineHelpText>
    <label>Observación prueba hidráulica realiazada</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>