unpackaged/main/default/objects/Check_List__c/fields/ObservacionesPruebaPluvial__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesPruebaPluvial__c</fullName>
    <label>Observaciones prueba pluvial</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>