unpackaged/main/default/objects/Check_List__c/fields/ObservacionesPruebaPluvialRealizada__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesPruebaPluvialRealizada__c</fullName>
    <label>Observaciones prueba pluvial realizada</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>