unpackaged/main/default/objects/Check_List__c/fields/ObservacionesPruebaSanitariaRealizada__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesPruebaSanitariaRealizada__c</fullName>
    <inlineHelpText>Observaciones pruebas sanitarias realizadas</inlineHelpText>
    <label>Observaciones prueba sanitaria realizada</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>