unpackaged/main/default/objects/Check_List__c/fields/ObservacionesPruebasGas__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesPruebasGas__c</fullName>
    <label>Observaciones pruebas de gas</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>