unpackaged/main/default/objects/Check_List__c/fields/ObservacionesPruebasGasRealizada__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesPruebasGasRealizada__c</fullName>
    <label>Observaciones pruebas gas realizada</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>