unpackaged/main/default/objects/Check_List__c/fields/ObservacionesPruebasSanitarias__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesPruebasSanitarias__c</fullName>
    <label>Observaciones pruebas sanitarias</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>