unpackaged/main/default/objects/Check_List__c/fields/ObservacionesPueVenChMar__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesPueVenChMar__c</fullName>
    <inlineHelpText>Observaciones puertas, ventanas, chapas y marcos</inlineHelpText>
    <label>Observaciones puertas, ventanas, chapas</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>