unpackaged/main/default/objects/Check_List__c/fields/ObservacionesSanitariosLavabosNivelTres__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesSanitariosLavabosNivelTres__c</fullName>
    <inlineHelpText>Observaciones sanitarios, lavabos, accesorios de baño Nivel Tres</inlineHelpText>
    <label>Observaciones sanitarios lavabos N3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>