unpackaged/main/default/objects/Check_List__c/fields/ObservacionesSanitariosLavabosPlantaAlta__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesSanitariosLavabosPlantaAlta__c</fullName>
    <label>Observaciones,  sanitarios, lavabos  PA</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>