unpackaged/main/default/objects/Check_List__c/fields/ObservacionesSanLavAcc__c.field-meta.xml
<CustomField>
    <fullName>ObservacionesSanLavAcc__c</fullName>
    <inlineHelpText>Observaciones de sanitarios, lavabos, accesorios de baño</inlineHelpText>
    <label>Observaciones sanitarios lavabos</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>