unpackaged/main/default/objects/Check_List__c/fields/PisoCeramicoBanqueta__c.field-meta.xml
<CustomField>
    <fullName>PisoCeramicoBanqueta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Piso cerámico y banqueta</label>
    <type>Checkbox</type>
</CustomField>