unpackaged/main/default/objects/Check_List__c/fields/PruebaElectrica__c.field-meta.xml
<CustomField>
    <fullName>PruebaElectrica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prueba eléctrica</label>
    <type>Checkbox</type>
</CustomField>