unpackaged/main/default/objects/Check_List__c/fields/PruebaElectricaRealizada__c.field-meta.xml
<CustomField>
    <fullName>PruebaElectricaRealizada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prueba eléctrica realizada</label>
    <type>Checkbox</type>
</CustomField>