unpackaged/main/default/objects/Check_List__c/fields/PruebaHidraulica__c.field-meta.xml
<CustomField>
    <fullName>PruebaHidraulica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prueba hidráulica</label>
    <type>Checkbox</type>
</CustomField>