unpackaged/main/default/objects/Check_List__c/fields/PruebaHidraulicaRealizada__c.field-meta.xml
<CustomField>
    <fullName>PruebaHidraulicaRealizada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prueba hidráulica realizada</label>
    <type>Checkbox</type>
</CustomField>