unpackaged/main/default/objects/Check_List__c/fields/PruebaPluvial__c.field-meta.xml
<CustomField>
    <fullName>PruebaPluvial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prueba pluvial</label>
    <type>Checkbox</type>
</CustomField>