unpackaged/main/default/objects/Check_List__c/fields/PruebaPluvialRealizada__c.field-meta.xml
<CustomField>
    <fullName>PruebaPluvialRealizada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prueba del pluvial realizada</label>
    <type>Checkbox</type>
</CustomField>