unpackaged/main/default/objects/Check_List__c/fields/PruebasGas__c.field-meta.xml
<CustomField>
    <fullName>PruebasGas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pruebas de gas</label>
    <type>Checkbox</type>
</CustomField>