unpackaged/main/default/objects/Check_List__c/fields/PruebasGasRealizada__c.field-meta.xml
<CustomField>
    <fullName>PruebasGasRealizada__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pruebas de gas realizada</label>
    <type>Checkbox</type>
</CustomField>