unpackaged/main/default/objects/Check_List__c/fields/PruebasSanitarias__c.field-meta.xml
<CustomField>
    <fullName>PruebasSanitarias__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pruebas sanitarias</label>
    <type>Checkbox</type>
</CustomField>