unpackaged/main/default/objects/Check_List__c/fields/PruebasSanitariasRealizadas__c.field-meta.xml
<CustomField>
    <fullName>PruebasSanitariasRealizadas__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pruebas sanitarias realizadas</label>
    <type>Checkbox</type>
</CustomField>