unpackaged/main/default/objects/Check_List__c/fields/PuertasVentanasChapasMarcos__c.field-meta.xml
<CustomField>
    <fullName>PuertasVentanasChapasMarcos__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Puertas ventanas chapas y marcos</label>
    <type>Checkbox</type>
</CustomField>