unpackaged/main/default/objects/Check_List__c/fields/SanitariosLavabosAccBanoNivelTres__c.field-meta.xml
<CustomField>
    <fullName>SanitariosLavabosAccBanoNivelTres__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sanitarios, lavabos, acc. de baño N3</label>
    <type>Checkbox</type>
</CustomField>