unpackaged/main/default/objects/Check_List__c/fields/SanitariosLavabosAccBanoPlantaAlta__c.field-meta.xml
<CustomField>
    <fullName>SanitariosLavabosAccBanoPlantaAlta__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sanitarios, lavabos, acc. de baño PA</label>
    <type>Checkbox</type>
</CustomField>