unpackaged/main/default/objects/Check_List__c/fields/SanitariosLavabosAccesoriosBano__c.field-meta.xml
<CustomField>
    <fullName>SanitariosLavabosAccesoriosBano__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sanitarios lavabos accesorios de baño</label>
    <type>Checkbox</type>
</CustomField>