unpackaged/main/default/objects/Check_List__c/fields/Seleccionartodo__c.field-meta.xml
<CustomField>
    <fullName>Seleccionartodo__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Seleccionar todo</label>
    <type>Checkbox</type>
</CustomField>