unpackaged/main/default/objects/Check_List__c/fields/Vivienda__c.field-meta.xml
<CustomField>
    <fullName>Vivienda__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vivienda</label>
    <referenceTo>Inventario__c</referenceTo>
    <relationshipLabel>Check List</relationshipLabel>
    <relationshipName>CheckList</relationshipName>
    <type>Lookup</type>
</CustomField>