unpackaged/main/default/objects/Check_List__c/recordTypes/Planta_1.recordType-meta.xml
<RecordType>
    <fullName>Planta_1</fullName>
    <active>true</active>
    <label>Planta 1</label>
</RecordType>