unpackaged/main/default/objects/Check_List__c/recordTypes/Planta_2.recordType-meta.xml
<RecordType>
    <fullName>Planta_2</fullName>
    <active>true</active>
    <label>Planta 2</label>
</RecordType>