unpackaged/main/default/objects/Check_List__c/recordTypes/Planta_3.recordType-meta.xml
<RecordType>
    <fullName>Planta_3</fullName>
    <active>true</active>
    <label>Planta 3</label>
</RecordType>