unpackaged/main/default/objects/Check_List__c/validationRules/Checklist_planta1.validationRule-meta.xml
<ValidationRule>
    <fullName>Checklist_planta1</fullName>
    <active>true</active>
    <description>No permite modificar el registro una vez creado</description>
    <errorConditionFormula>IF(NOT(AcabadoExteriorPintura__c ),
	ISCHANGED(AcabadoExteriorPintura__c),
IF(NOT(AccesoriosElectricos__c),
	ISCHANGED(AccesoriosElectricos__c), 
IF(NOT(PuertasVentanasChapasMarcos__c),
	ISCHANGED(PuertasVentanasChapasMarcos__c), 
IF(NOT(BanquetasBardasPropiasMedianeras__c),
	ISCHANGED(BanquetasBardasPropiasMedianeras__c), 
IF(NOT(AzulejosPisos__c), 
	ISCHANGED(AzulejosPisos__c), 
IF(NOT(AcaboInterior__c), 
	ISCHANGED(AcaboInterior__c),
IF(NOT(MarcosPuertasVentanasChapasCorrediza__c),
	ISCHANGED(MarcosPuertasVentanasChapasCorrediza__c),
IF(NOT(AccesoriosElectricosPreparacion__c),
	ISCHANGED(AccesoriosElectricosPreparacion__c),
IF(NOT(SanitariosLavabosAccesoriosBano__c),
	ISCHANGED(SanitariosLavabosAccesoriosBano__c),
IF(NOT(ImpermeabilizacionVentilasPoliductos__c),
	ISCHANGED(ImpermeabilizacionVentilasPoliductos__c),
IF(NOT(ColocacionCalentadoresSolares__c),
	ISCHANGED(ColocacionCalentadoresSolares__c),
IF(NOT(AcabadosLosaAzotea__c),
	ISCHANGED(AcabadosLosaAzotea__c), 
IF(NOT(PruebaPluvialRealizada__c),
	ISCHANGED(PruebaPluvialRealizada__c),
IF(NOT(PruebaElectricaRealizada__c),
	ISCHANGED(PruebaElectricaRealizada__c),
IF(NOT(PruebaHidraulicaRealizada__c),
	ISCHANGED(PruebaHidraulicaRealizada__c),
IF(NOT(PruebasSanitariasRealizadas__c),
	ISCHANGED(PruebasSanitariasRealizadas__c),
IF(NOT(PruebasGasRealizada__c),
	ISCHANGED(PruebasGasRealizada__c),
IF(NOT(KitEcologicoCompleto__c),
	ISCHANGED(KitEcologicoCompleto__c),
IF(NOT(AcabadoInteriorNivelTres__c),
	ISCHANGED(AcabadoInteriorNivelTres__c),
IF(NOT(AcabadoInteriorPlantaAlta__c),
	ISCHANGED(AcabadoInteriorPlantaAlta__c),
IF(NOT(AccesoriosElctricosPrepNivelTres__c),
	ISCHANGED(AccesoriosElctricosPrepNivelTres__c),
IF(NOT(AccesoriosElectricosPrepPlantaAlta__c),
	ISCHANGED(AccesoriosElectricosPrepPlantaAlta__c),
IF(NOT(AzulejosPisosZoclo__c),
	ISCHANGED(AzulejosPisosZoclo__c),
IF(NOT(AzulejosPisosPlantaAlta__c),
	ISCHANGED(AzulejosPisosPlantaAlta__c),
IF(NOT(CalentadorValvulaAlivioColocado__c),
	ISCHANGED(CalentadorValvulaAlivioColocado__c),
IF(NOT(LavaderoConexionesColaderasRegistro__c),
	ISCHANGED(LavaderoConexionesColaderasRegistro__c),
IF(NOT(MarcosPuertasVentanasCHapasPA__c),
	ISCHANGED(MarcosPuertasVentanasCHapasPA__c),
IF(NOT(MarcosPuertasVentanasChapasNivelTres__c),
	ISCHANGED(MarcosPuertasVentanasChapasNivelTres__c),
IF(NOT(PruebaElectrica__c),
	ISCHANGED(PruebaElectrica__c),
IF(NOT(PruebaHidraulica__c),
	ISCHANGED(PruebaHidraulica__c),
IF(NOT(PruebaPluvial__c),
	ISCHANGED(PruebaPluvial__c),
IF(NOT(PruebasGas__c),
	ISCHANGED(PruebasGas__c),
IF(NOT(PruebasSanitarias__c),
	ISCHANGED(PruebasSanitarias__c),
IF(NOT(SanitariosLavabosAccBanoNivelTres__c),
	ISCHANGED(SanitariosLavabosAccBanoNivelTres__c),
IF(NOT(SanitariosLavabosAccBanoPlantaAlta__c),
	ISCHANGED(SanitariosLavabosAccBanoPlantaAlta__c),
	null
	)
))))))))))))))))))))))))))))))))))</errorConditionFormula>
    <errorMessage>No se puede modificar los valores del CheckList 
Favor de duplicar la versión</errorMessage>
</ValidationRule>