unpackaged/main/default/objects/Check_List__c/validationRules/No_modificar_nombre_del_check.validationRule-meta.xml
<ValidationRule>
    <fullName>No_modificar_nombre_del_check</fullName>
    <active>true</active>
    <errorConditionFormula>IF($Profile.Id &lt;&gt; &quot;00eo0000000vwpl&quot;&amp;&amp; NOT(ISBLANK( Name )), (ISCHANGED(Name)) ,null)</errorConditionFormula>
    <errorMessage>No puede modificar el Nombre del Checklist.</errorMessage>
</ValidationRule>