unpackaged/main/default/objects/Check_List__c/listViews/Checklist_estatus.listView-meta.xml
<ListView>
    <fullName>Checklist_estatus</fullName>
    <columns>MLI__c</columns>
    <columns>Vivienda__c</columns>
    <columns>NAME</columns>
    <columns>Estatus__c</columns>
    <columns>Completado__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>Checklist estatus</label>
</ListView>